# integraite

./: .gitignore  SERVICENOW_INTEGRATION.md
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  SETUP_GUIDE.md  SRE_AGENT_README.md  check_db.py  deploy.sh  docker-compose.yml  env.example  env.production  env_file  incident_logs.json  incident_logs_bkp.json  pyproject.toml  run_backend.sh  setup_backend.sh  simple_db_check.py  ssh_config.py  start_server.py  test_basic_access.py  test_servicenow.py  test_servicenow_direct.py  test_sre_agent.py  test_sre_direct.py
backend/alembic/versions/: add_sre_execution_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agents.py  audit.py  auth.py  automations.py  billing.py  dashboard.py  incident_logs.json  incidents.py  integrations.py  onboarding.py  organizations.py  sre_agent.py  sre_agent_bkp.py  users.py
backend/app/core/: config.py  database.py  init_db.py  security.py
backend/app/models/: __init__.py  agent.py  agent_execution.py  audit.py  automation.py  billing.py  incident.py  incident_extended.py  integration.py  sre_execution.py  user.py
backend/app/schemas/: auth.py  incident.py  integration.py  organization.py  sre_execution.py
backend/app/services/: agent_executor.py  incident_service.py  self_healing_sre_agent.py  servicenow_client.py  sre_execution_service.py
frontend/: .gitignore  DEPLOYMENT.md  deploy_frontend.bat  deploy_frontend.sh  env.development  env.production  index.html  package-lock.json  package.json  (+3 more)
(+62 files in other folders)
